# antfarm

./: .gitignore  AGENTS-MANAGEMENT-SPEC.md  ANTFARM-DIAGNOSTIC-2026-06-23.md  CHAT-QA-SCRIPT.md  CHIEF-OF-STAFF-BUILD-PLAN.md  CONTENT-SYSTEM-BUILD-PLAN.md  ENGINE-MCP-BUILD-PLAN.md  ENGINE-MCP-CODE-PROMPTS.md  FORGE-BUILD-PLAN.md  FORGE-CHAT-BUILD-PLAN.md  FORGE-CHAT-CODE-PROMPTS.md  FORGE-CODE-PROMPTS.md  FORGE-SPEC-MODE-BUILD-PLAN.md  FORGE-SPEC-MODE-CODE-PROMPTS.md  HANDOFF-ENGINE-MCP.md  README.md  SCHOLAR-BUILD-PLAN.md  SCHOLAR-CODE-PROMPTS.md  UNIFIED-WORKSPACE-SPEC.md  WATCHDOG-UX-BUILD-PLAN.md  antfarm--CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
docs/: README.md  architecture.md  features.md  getting-started.md  overview.md
docs/architecture/: backend.md  data-sources.md  frontend.md
docs/features/: dispatch.md  git-metrics.md  morning-and-planning.md  overnight-harness.md  projects.md  sessions.md  usage.md  voice-and-mobile.md  workspace.md
engine-queue/: .gitignore  CONSOLE-CODE-PROMPTS.md  CONSOLE-SCOPE.md
engine-queue/console-app/: .env.example  .gitignore  index.html  package-lock.json  package.json
evals/: run.mjs
mcp-server/: README.md  index.mjs  package-lock.json  package.json
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  chat.rs  daily.rs  dispatch.rs  forge.rs  harness.rs  main.rs  memory.rs  mobile.rs  morning.rs  pdf.rs  planning.rs  pod.rs  pty.rs  spec.rs
(+73 files in other folders)
