[package]
name = "ant-farm"
version = "0.1.0"
description = "Ant Farm — project operating system"
authors = ["Connor Dore"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
portable-pty = "0.9.0"
base64 = "0.22.1"
tiny_http = "0.12"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls", "blocking"] }
comrak = "0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
